# wp5_pilot_platform

./: .env.example  .gitignore  CITATION.cff  Caddyfile  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/actors/: manager.py
backend/agents/: __init__.py  agent_manager.py  director.py  orchestrator.py  performer.py
backend/agents/STAGE/: __init__.py  director.py  moderator.py  orchestrator.py  performer.py
backend/agents/STAGE/prompts/: director_action_prompt.md  director_evaluate_prompt.md  director_prompt.md  director_update_prompt.md  moderator_prompt.md  performer_prompt.md  prompt_renderer.py
backend/agents/STAGE/prompts/system/: director_prompt.md  moderator_prompt.md  performer_prompt.md
backend/agents/STAGE/validation/: validate_performer.py  validate_pipeline.py
backend/agents/actions/: __init__.py  post_message.py
backend/agents/prompts/: director_prompt.md  director_prompt_es.md  performer_prompt.md  performer_prompt_es.md
backend/cache/: redis_client.py
backend/config/: README.md  experimental_settings.json  experimental_settings.toml  participant_tokens.json  participant_tokens.toml  simulation_settings.json  simulation_settings.toml
backend/db/: connection.py  schema.sql
backend/db/repositories/: config_repo.py  event_repo.py  message_repo.py  session_repo.py  token_repo.py
backend/features/: __init__.py  base.py  gate_until_user_post.py  news_article.py  runner.py
backend/logs/: 31d296d3-e958-46bd-b3a9-8d6e14df9422.html  used_tokens.jsonl
backend/models/: __init__.py  agent.py  message.py  session.py  session_state.py
backend/scenarios/: __init__.py  base.py  news_article.py
backend/simulation/: __init__.py  chatroom.py  session.py
backend/tests/: conftest.py  test_agent_manager.py  test_anonymization.py  test_chatroom.py  test_config_repo.py  test_director.py  test_event_repo.py  test_features.py  test_llm_manager.py  test_logger.py  test_message_model.py  test_message_repo.py  test_moderator.py  test_orchestrator_pipeline.py  test_participant_tokens.py  test_performer.py  test_redis_client.py  test_session_model.py  test_session_repo.py  test_token_repo.py  test_token_single_use.py
backend/utils/: __init__.py  config_loader.py  llm_gemini.py  llm_manager.py  log_viewer.py  logger.py  participant_tokens.py  session_manager.py  token_manager.py
backend/utils/llm/: __init__.py  llm_anthropic.py  llm_gemini.py  llm_huggingface.py  llm_manager.py
backend/utils/llm/local/: __init__.py  llm_salamandra.py  test_salamandra.py
backend/utils/llm/provider/: __init__.py  llm_anthropic.py  llm_gemini.py  llm_huggingface.py  llm_konstanz.py  llm_local.py  llm_mistral.py
(+50 files in other folders)
